l10n: fa, Updated newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103911 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/newsletter.lang
+++ b/fa/newsletter.lang
@@ -106,74 +106,74 @@ Your newsletter subscription has been confirmed.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+بیاید با هم دوست باشیم!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+سایت فایرفاکس هم در فهرست شبکه‌های اجتماعی موردعلاقه شماست. با ما ارتباط برقرار کنید و در گفتگو شرکت کنید.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+ترجیحات <span>عضویت در خبرنامه</span> خود را مدیریت کنید
 
 
 ;Subscribe
-Subscribe
+عضویت
 
 
 ;Unsubscribe
-Unsubscribe
+لغو عضویت
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+اگر می‌خواهید از تمام پست‌های‌الکترونیکی موزیلا حذف شوید اینجا را کلیک کنید
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+من را از تمام پست‌های‌الکترونیکی موزیلا حذف کن
 
 
 ;Save Preferences
-Save Preferences
+ذخیره ترجیحات
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+از بروزرسانی ترجیحات پست‌الکترونیکی خود متشکریم.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+شما از عضویت خارج شدید.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+ما از این‌که می‌بینیم شما تصمیم دارید بروید متاسفیم. امکانش هست دلیل رفتن خود را به ما بگویید؟
 
 
 ;You send too many emails.
-You send too many emails.
+شما پست‌های‌الکترونیکی خیلی زیادی می‌فرستید.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+ارسال‌های شما مرتبط با من نبود.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+طراحی پست‌الکترونیکی شما برای خواندن خیلی سخت بود.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+من برای این عضو نشدم.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+من از طریق فیس‌بوک و توییتر در ارتباط با موزیلا هستم.
 
 
 ;Submit
-Submit
+ارسال
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+ممنون که دلیل رفتن خود را به ما گفتید.
 
 
