l10n: fa, Updated newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103912 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/newsletter.lang
+++ b/fa/newsletter.lang
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+عضویت شما در خبرنامه تایید شد.
 
 
 ;Format
