l10n: gd, translations by Michael Bauer
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103918 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -118,6 +118,6 @@ Thoir cuireadh dha do charaidean ach am faic iad na bhios san ath Firefox. <a hr
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+A' cleachdadh Firefox air grunn choimpiutairean? 'S urrainn dhut na tuilleadain agad a shioncronachadh air gach aon dhiubh <a href="%">Faigh a-mach mar a chuireas tu gu dol an sioncronachadh.</a>
 
 
