l10n: te, translations by Arjuna Rao Chavala
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103919 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/te/main.lang
+++ b/te/main.lang
@@ -339,66 +339,67 @@ MPEG-4 ఫార్మాటు
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+ఆండ్రాయిడ్ కొరకు ఫైర్‌ఫాక్స్ తెచ్చుకోండి
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+ <span>ఆండ్రాయిడ్</span> కొరకు  దింపుకోలు
 
 
 ;Free from the Android Market
-Free from the Android Market
+అండ్రాయిడ్ విక్రయకేంద్రము నుండి వుచితంగా
 
 
 ;Desktop
-Desktop
+రంగస్థలం
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+మొబైల్ కొరకు  ఫైర్‌ఫాక్స్ బీటా
 
 
 ;Firefox for mobile
-Firefox for mobile
+మొబైల్ కొరకు  ఫైర్‌ఫాక్స్
 
 
 ;Email
-Email
+ఈమెయిల్
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+మొజిల్లా ఫైర్‌ఫాక్స్. ఆధునిక వెబ్ ను  XP  చేరువచేస్తూ.
 
 
 ;Super speed
-Super speed
+అత్యంత వేగమైన
 
 
 ;Stunning graphics
-Stunning graphics
+కళ్లుచెదిరే రేఖాచిత్రాలు
 
 
 ;The latest technologies
-The latest technologies
+అధునాతన సాంకేతికలతో
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+ఫైర్‌ఫాక్స్  పాత రూపాన్ని మీరు వాడుతున్నారు. సురక్షితంగా వుండటానికి నవీకరించండి.<br/> తాజా సౌలభ్యాలు, వేగం మరియు రక్షణ సమస్యలకు పరిష్కారాల కోసం ఒక్క నిముషం లోపల <a href="%s">ఉచితంగా కొత్త రూపాన్ని </a>దింపుకోండి.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+మీకు ఫైర్‌ఫాక్స్ సరికొత్త రూపం అవసరం! ఒక నిముషం లో సురక్షితంగా వుండండి. <br/> విహరణలో గొప్పఅనుభవానికి మరియు మలచుకోవడానికి  కొత్త ఫైర్‌ఫాక్స్ వాడటం ప్రారంభించండి. <br/> ఇది వేగవంతం మరియు వుచితం!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+ఫైర్‌ఫాక్స్  పాత రూపాన్ని మీరు వాడుతున్నారు. సురక్షితంగా వుండటానికి <a href="%s">నవీకరించండి</a>.<br/> తాజా సౌలభ్యాలు, వేగం మరియు రక్షణ సమస్యలకు పరిష్కారాల అనుభవాలు పొందండి. ఒక్క నిముషం లోపల<a href="%s">ఉచితంగా కొత్త రూపాన్ని </a>దింపుకోండి .
 You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 
 
 ;Upgrade now
-Upgrade now
+ఇప్పుడే  కొత్త రూపానికి నవీకరించు
 
 
 ;Update now
-Update now
+ఇప్పుడే తాజాపరచు
 
 
