catalan (ca) localisation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103923 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/upgradedialog.lang
+++ b/ca/upgradedialog.lang
@@ -23,15 +23,15 @@ Més fantàstic que mai
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Hi ha una nova versió del Firefox que us protegirà millor contra els atacs en línia.
 
 
 ;Get the upgrade — it’s fast & free!
-<a %s>Baixeu l'actualització</a> - és ràpid i gratuït!
+<a %s>Baixeu l'actualització</a>. És ràpid i gratuït!
 
 
 ;get the latest in security
-get the latest in security
+obteniu les darreres funcions de seguretat
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ tingueu un rendiment millor
 
 
 ;enjoy greater customization
-enjoy greater customization
+gaudiu d'una personalització millor
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+La vostra versió del Firefox aviat serà vulnerable als atacs en línia.
 
 
 ;Stay safe online
-estigueu segur en línia
+Estigueu segur en línia
 
 
 ;Enjoy new features
-gaudiu de les noves funcions
+Gaudiu de les noves funcions
 
 
 ;URGENT!
@@ -63,26 +63,26 @@ La vostra versió del Firefox ja no està protegida contra atacs en línia.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Aquest és l'últim recordatori abans que us actualitzeu automàticament a la darrera versió
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+El Firefox ja no és compatible amb la vostra versió del sistema operatiu i serà vulnerable a atacs en línia.
 
 
 ;We recommend:
-We recommend:
+Recomanem:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Actualitzar el <a %s>sistema operatiu</a>.
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Baixar un navegador compatible.
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instal·lar una actualització gratuïta del <a %s>sistema operatiu</a>.
 
 
