l10n: te, translations by Arjuna Rao Chavala
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103924 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/te/snippets.lang
+++ b/te/snippets.lang
@@ -18,7 +18,7 @@
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-ఫైర్‌ఫాక్స్ భవిష్యాన్ని కొద్దిగా ముందస్తుగా పొందండి. <a href="%s">ఫైర్‌ఫాక్స్ అరోరా డౌనులోడుచేయి</a> మరియు సరికొత్త విశేషణాలను పరిశీలించు.
+ఫైర్‌ఫాక్స్ భవిష్యత్ రూపాన్ని కొద్దిగా ముందస్తుగా పొందండి.<a href="%s">మరింత తెలుసుకోండి</a>. <a href="%s">ఫైర్‌ఫాక్స్ అరోరా డౌనులోడుచేయి</a> మరియు సరికొత్త విశేషణాలను పరిశీలించు.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
@@ -26,98 +26,97 @@
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-
+<a href="%s">ఫైర్‌ఫాక్స్ సంబంధీకుడవ్వండి</a>ప్రపంచంతో ఫైర్‌ఫాక్స్ పంచుకోవడానికి కావలసినవన్నీ పొందండి !
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+ సర్దుబాటు లేకుండా మీ తరపున సృజనాత్మకత కనబర్చడానికి లాభాపేక్షలేకుండా మరియు వుచితంగా అందచేయటానికి గర్వించే  సంస్థ  . మా గమ్యాన్ని<a href="%s">మరింత తెలుసుకోండి</a>.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+వేగం, సులభంగా మార్పులుచేసుకోనేసౌలభ్యం  మరియు సురక్షితమైనది. ఫైర్‌ఫాక్స్ ఒకే ఒక విహరిణి మీ అవసరాలకు మొదటిప్రాధాన్యమిచ్చేది. రూపంలో తేడాలగురించి <a href="%s">మరింత తెలుసుకోండి</a>.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s"> మీ అండ్రాయిడ్ టాబ్లెట్ పై ఫైర్‌ఫాక్స్ దింపుకోండి</a>  మరియు వెబ్ శక్తిని మీ చేతుల్లో పెట్టండి. ఇప్పడే తెచ్చుకోండి.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+<a href="%s">ప్లగిన్ చెక్</a> తో మీ ప్లగిన్ల తాజాస్థితిలో వుంచి సురక్షితంగా వుండండి.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+మీ  ఫైర్‌ఫాక్స్ ని షోకు చేయండి.  తాజా <a href="%s">వ్యక్తిగతరూపాలలో</a> చూచుకోండి.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+టేబ్ల్  ఎక్కువైనాయా?<a href="%s">పనోరమా</a>గందరగోళంనుండి మీ విహరిణి పొందండి.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+ఏ ఇద్దరు ఫైర్‌ఫాక్స్ వాడుకరులు ఒకేలా వుండరు <a href="%s">మీ విహరిణి కి బొత్తాము చేర్చు</a> లేక వాడనివాటిని తొలగించు . నివాసం పై కుడి మీటనొక్కి మలచుకొను ఎంచుకో .
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+వ్యక్తిగతరూపాలలో  ఫైర్‌ఫాక్స్  చూసుకోండి.  ప్రయత్నించటానికి  మౌజ్ కదపండి, అపాదించడానికి నొక్కండి . వేల రూపాల కోసం <a href="%s">చిత్ర ప్రదర్శన</a>  దర్శించండి!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+బీటాకన్నా ముందే తాజా సౌలభ్యాలు మొదటిగా చూడండి. <a href="%s">ఫైర్‌ఫాక్స్ అరోరా దించుకో.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+<a href="%s">ఫైర్‌ఫాక్స్ అరోరా దించుకో</a>  సౌలభ్యాల పరిశీలనకు బీటాలో చేర్చు నిర్ణయానికి మాకు సహాయపడటానికి.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+ముందుగా రండి మరియు ఫైర్‌ఫాక్స్ భవిష్యత్తు  రూపుచేయండి. <a href="%s">ఫైర్‌ఫాక్స్ అరోరా దించుకో.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+ఆండ్రాయిడ్ ఫైర్‌ఫాక్స్   మీరు టాబ్లెట్లపై విహరణకు అనువుగా చేయబడింది. <a href="%s">మీ మునివేళ్లపై వెబ్ శక్తిని తెచ్చుకో</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+ఆండ్రాయిడ్ ఫైర్‌ఫాక్స్   మీ టాబ్లెట్ పై  దించుకో.మీ మునివేళ్లపై వెబ్ శక్తిని తెచ్చుకో<a href="%s">ఇప్పుడే </a>తెచ్చుకో.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%"> ఫైర్‌ఫాక్స్ బీటా దించుకో</a>,  మీ అనుభవాల స్పందన పంచుకొని,45 కోట్లమంది వాడుకరులకు తదుపరి ఫైర్‌ఫాక్స్  మరింత అద్భుతంచేకూర్చేటట్లుచేయండి.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+<a href="%">ఈరోజే ఫైర్‌ఫాక్స్ బీటా దించుకో!</a> సౌలభ్యాలను పరిశీలించు, మెరుగుచేయి మరియు తదుపరి రూపాన్ని ఇప్పటికంటే మంచిగా చేయి.
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+ఫైర్‌ఫాక్స్ అంటే ఇష్టమా? తదుపరి రూపాన్ని ఇప్పటికంటే మంచిగా చేయటానకి సహాయపడ్తారా? <a href="%">ఈరోజే ఫైర్‌ఫాక్స్ బీటా దించుకో!</a> మీ స్పందనని మాతో పంచుకోండి ఈ రోజే!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+తాజా ఫైర్‌ఫాక్స్ బీటా వాడుతున్నారా? <a href="%">ఇప్పుడే తెచ్చుకో</a>  మరియు కొత్త సౌలభ్యాలు పరీక్షించుటలో సహాయపడండి .
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+తాజా ఫైర్‌ఫాక్స్ బీటా వాడటంలేదా? <a href="%">ఈరోజే తెచ్చుకో</a> తదుపరి రూపంలో జరుగుతున్న పని ఇప్పుడే తెలుసుకోండి .
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+మీ స్పందనను పంచదలచారా? <a href="%">ఎలా పంపాలో తెలుసుకో</a>  మరియు తదుపరి ఫైర్‌ఫాక్స్  మరింత అద్భుతంచేకూర్చేటట్లుచేయండి.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+ఫైర్‌ఫాక్స్ బీటా  వాడుకరులు: <a href="%">స్పందనలు తెలుపటం</a> మరచిపోవద్దు. ఇది మా తదుపరి రూపంపై చిట్టచివరి మార్పులు చేయడానికి సహాయపడుతుంది.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Help make the next version of Firefox even more awesome తదుపరి  ఫైర్‌ఫాక్స్ రూపాన్ని మరింత అద్భుతం చేయటంలో సహయపడండి. <a href="%"> ఫైర్‌ఫాక్స్ సంబంధీకుడవ్వండి</a> మరియు ఫైర్‌ఫాక్స్ బీటా మీ స్నేహితులతో పంచుకోండి.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+త్వరలో రాయే  సౌలభ్యాల ముందుచూపుకోసం మీ స్నేహితులని ఆహ్వానించండి.  <a href="%">ఫైర్‌ఫాక్స్ సంబంధీకుడు అవ్వండి </a> మరియు ఫైర్‌ఫాక్స్ అరోరా పంచండి ఈరోజే .
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+ఎక్కువ కంప్యూటర్లపై ఫైర్‌ఫాక్స్ వాడుతున్నారా?  మీ యాడ్ ఆన్లు ఏకీకృతంవాటన్నిటిలో చేయవచ్చు. <a href="%"> సింక్ ని చేతనం చెయ్యటం తెలుసుకో.</a>
 
 
