adds {ok} for strings identical to English
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103925 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/newsletter.lang
+++ b/ca/newsletter.lang
@@ -62,7 +62,7 @@ Llegiu-ho tot al nostre <span>butlletí</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+S'ha confirmat la subscripció al butlletí.
 
 
 ;Format
@@ -70,11 +70,11 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Ja està tot a punt! <span>Espereu, encara n'hi ha més</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Voleu rebre la informació més rellevant? Introduïu alguna dada vostra més i, mentre sou aquí, subscriviu-vos a altres notícies de Mozilla.
 
 
 ;Firefox & You
@@ -82,7 +82,7 @@ Firefox & You
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Altres butlletins nostres:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
