--- a/ca/upgradedialog.lang
+++ b/ca/upgradedialog.lang
@@ -55,7 +55,7 @@ Gaudiu de les noves funcions
 
 
 ;URGENT!
-URGENT!
+URGENT! {ok}
 
 
 ;Your version of Firefox is no longer protected against online attacks.
