--- a/ja/survey1.lang
+++ b/ja/survey1.lang
@@ -2,51 +2,51 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
+このたびはアンケートにご協力いただきありがとうございます。ここでは、インターネットの使い方、特にあなたが今お使いになっているブラウザソフトについて、いくつか質問をさせていただきます。「ブラウザ」という用語は、Web サイトを表示しインターネットの閲覧を可能にするアプリケーションの総称です。回答にかかる時間はおよそ 3 分です。
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
+あなたの年齢をお答えください。
 
 
 ;16-24
-16-24
+16 歳から 24 歳
 
 
 ;25-34
-25-34
+25 歳から 34 歳
 
 
 ;35-44
-35-44
+35 歳から 44 歳
 
 
 ;45-54
-45-54
+45 歳から 54 歳
 
 
 ;55-64
-55-64
+55 歳から 64 歳
 
 
 ;65+
-65+
+65 歳以上
 
 
 ;Please indicate your gender
-Please indicate your gender
+あなたの性別をお答えください。
 
 
 ;Male
-Male
+男性
 
 
 ;Female
-Female
+女性
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+現在、自宅もしくは職場において、デスクトップパソコンあるいはノートパソコン上で使っている Web ブラウザをお選びください。
 
 
 ;Apple Safari
@@ -70,135 +70,135 @@ Opera
 
 
 ;Another browser
-Another browser
+その他のブラウザ
 
 
 ;Don’t know
-Don’t know
+分からない
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
+友人もしくは同僚にどのぐらい Firefox を勧めたい、あるいは勧めたくないと思いますか？
 
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
+誰かに頼まれなくても、自分から進んで人に勧めようと思う
 
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
+もし誰かに頼まれたら人に勧めるかもしれない
 
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
+どちらとも言えない
 
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
+あまり人に勧めようとは思わない
 
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
+人に勧めたくはないし、むしろ Firefox を使わないように勧めるかもしれない
 
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+あなたはどのぐらい Firefox が好き、あるいは嫌いですか？
 
 
 ;Dislike a great deal
-Dislike a great deal
+大嫌い
 
 
 ;Dislike a little
-Dislike a little
+嫌い
 
 
 ;Neither like nor dislike
-Neither like nor dislike
+どちらとも言えない
 
 
 ;Like a little
-Like a little
+好き
 
 
 ;Like a great deal
-Like a great deal
+大好き
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+それでは、あらゆることを念頭に置いて総合的に考えた場合、あなたはどのぐらい Firefox に満足、あるいは不満ですか？
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
+とても不満
 
 
 ;Dissatisfied
-Dissatisfied
+不満
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+やや不満
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+どちらとも言えない
 
 
 ;Somewhat satisfied
-Somewhat satisfied
+やや満足
 
 
 ;Satisfied
-Satisfied
+満足
 
 
 ;Extremely satisfied
-Extremely satisfied
+とても満足
 
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
+以下の各説明について、あなたの考えに当てはまるものをお答えください。
 
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
+これについて知っており、これは正しいと思う
 
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
+これについて聞いたことはあるが、正しいかどうかは分からない
 
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
+これについて今まで聞いたことはない、もしくは知らない
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
+答えに正解・不正解はありませんので、できるだけ正直に答えてください。
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox は Mozilla が作っている
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
+B. Mozilla は非営利法人である
 
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
+C. Mozilla のミッションは Web をより良い場所にすることだ
 
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox は最初の Web ブラウザだ
 
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
+以下のどれがあなたのお気に入りのブラウザだと思いますか？
 
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
+以下の Firefox のサービスについて、これまでに耳にしたことはありますか？
 
 
 ;Firefox Sync
@@ -206,15 +206,15 @@ Firefox Sync
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
+どのパソコンやスマートフォンからでも、自分の Firefox のブックマーク、開いているタブ、ブラウジング履歴に安全にアクセスできるようにするサービス
 
 
 ;Firefox for Android
-Firefox for Android
+Android 版 Firefox
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+Android スマートフォン・タブレット向けの Firefox ブラウザ
 
 
 ;Mozilla Persona
@@ -222,7 +222,7 @@ Mozilla Persona
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
+自分が持っている任意のメールアドレスを使ってサイトにログインできるようにする認証システム
 
 
 ;Mozilla Marketplace
@@ -230,178 +230,178 @@ Mozilla Marketplace
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Mozilla が運営する、オープンな Web アプリケーションのためのオンラインストア
 
 
 ;Addons for Firefox
-Addons for Firefox
+Firefox 用アドオン
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
+Firefox に欲しい機能を追加して、自分好みのブラウザを作れるカスタマイズの方法
 
 
 ;None of these
-None of these
+どれも知らない
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
+以下の Firefox のサービスについて、現在お使いのものはありますか？
 
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
+説明文を読んで、今後使ってみたいと興味を持ったものはありましたか？
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+これまでどのぐらいの期間 Firefox をお使いになっていますか？
 
 
 ;Up to 6 months
-Up to 6 months
+6 か月以内
 
 
 ;6 months to a year
-6 months to a year
+6 か月から 1 年
 
 
 ;1 to 2 years
-1 to 2 years
+1 年から 2 年
 
 
 ;2 to 3 years
-2 to 3 years
+2 年から 3 年
 
 
 ;3 to 4 years
-3 to 4 years
+3 年から 4 年
 
 
 ;4 to 5 years
-4 to 5 years
+4 年から 5 年
 
 
 ;More than 5 years
-More than 5 years
+5 年以上
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+インターネットを閲覧する際、以下のどの端末を使っていますか？
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+自宅のデスクトップパソコン
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+職場のデスクトップパソコン
 
 
 ;Home laptop
-Home laptop
+自宅のノートパソコン
 
 
 ;Work laptop
-Work laptop
+職場のノートパソコン
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+スマートフォン (iPhone、Android ケータイなど)
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+タブレット (iPad など)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
+1 日平均してどのぐらいの時間、インターネットを使ったり Web サイトを見たりしていますか？
 
 
 ;Less than half an hour each day
-Less than half an hour each day
+1 日 30 分以下
 
 
 ;About an hour a day
-About an hour a day
+1 日 1 時間程度
 
 
 ;2 hours a day
-2 hours a day
+1 日 2 時間程度
 
 
 ;3 hours a day
-3 hours a day
+1 日 3 時間程度
 
 
 ;4 hours a day
-4 hours a day
+1 日 4 時間程度
 
 
 ;5 hours a day
-5 hours a day
+1 日 5 時間程度
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+1 日 6 時間以上
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+以上でアンケートは終わりです。ご協力ありがとうございました。
 
 
 ;Please enter a response
-Please enter a response
+回答を入力してください
 
 
 ;Illegal characters for single code input
-Illegal characters for single code input
+ひとつのコード入力に不正な文字が含まれています
 
 
 ;Illegal characters for multi code input
-Illegal characters for multi code input
+複数のコード入力に不正な文字が含まれています
 
 
 ;Please enter numbers only
-Please enter numbers only
+数字のみ入力してください
 
 
 ;Answer is outside of
-Answer is outside of
+回答が想定範囲を超えています
 
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
+答えのコードと他のコードを交ぜることはできません
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+回答数が上限 … を超えています
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+回答数は厳密に … でなければなりません
 
 
 ;Too many characters
-Too many characters
+文字数が多すぎます
 
 
 ;Illegal string for this template
-Illegal string for this template
+このテンプレートには不正な文字が含まれています
 
 
 ;Click here to go back into the survey
-Click here to go back into the survey
+アンケートへ戻るにはここをクリックしてください
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+強調表示された質問にお答えください
 
 
 ;Please select one answer only.
-Please select one answer only.
+答えはひとつだけ選んでください
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+答えは当てはまるものをすべて選んでください
 
 
