Update translation of upgradedialog.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103943 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/upgradedialog.lang
+++ b/ru/upgradedialog.lang
@@ -43,15 +43,15 @@
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Ваша версия Firefox скоро будет уязвима для атак из Интернета.
 
 
 ;Stay safe online
-обеспечьте безопасность в Интернете
+Обеспечьте свою безопасность в Интернете
 
 
 ;Enjoy new features
-насладитесь новыми возможностями
+Насладитесь новыми возможностями
 
 
 ;URGENT!
@@ -59,30 +59,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Ваша версия Firefox устарела и не защищена от атак из Интернета.
+Ваша версия Firefox устарела и более не защищена от атак из Интернета.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Это последнее напоминание перед тем, как вы будете автоматически обновлены на последнюю версию
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox больше не поддерживает вашу версию операционной системы и будет уязвим для атак из Интернета.
 
 
 ;We recommend:
-We recommend:
+Мы рекомендуем:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Обновить вашу <a %s>операционную систему</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Загрузить совместимый браузер
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Установить бесплатное обновление для вашей <a %s>операционной системы</a>
 
 
