Localize 7 new strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103946 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/upgradedialog.lang
+++ b/nl/upgradedialog.lang
@@ -43,7 +43,7 @@ geniet van betere aanpassing
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Uw versie van Firefox wordt eerdaags kwetsbaar voor online-aanvallen.
 
 
 ;Stay safe online
@@ -59,30 +59,30 @@ DRINGEND!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Uw versie van Firefox wordt niet langer beschermd tegen online aanvallen.
+Uw versie van Firefox wordt niet langer beschermd tegen online-aanvallen.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Dit is de laatste herinnering voordat uw Firefox automatisch naar de nieuwste versie wordt bijgewerkt
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ondersteunt de versie van uw besturingssysteem niet meer en wordt kwetsbaar voor online-aanvallen.
 
 
 ;We recommend:
-We recommend:
+We raden aan:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Uw <a %s>besturingssysteem</a> te upgraden
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Een compatibele browser te downloaden
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Een gratis upgrade voor uw <a %s>besturingssysteem</a> te installeren
 
 
