upgradedialog.lang sl
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103954 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -1,9 +1,9 @@
 ;Get the Newest Firefox
-Prenesite novi Firefox
+Prenesite si novi Firefox
 
 
 ;The Newest Firefox is Here!
-Izšel je novi Firefox!
+Pred vami je novi Firefox!
 
 
 ;<a %s>Quick, easy and free update</a>
@@ -11,7 +11,7 @@ Izšel je novi Firefox!
 
 
 ;Fresh new look
-Svež izgled
+Svež videz
 
 
 ;Much faster than Firefox 3.6
@@ -23,15 +23,15 @@ Veliko hitrejši kot Firefox 3.6
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Na razpolago je nova različica Firefox, ki vaš še bolje brani pred napadi na spletu.
 
 
 ;Get the upgrade — it’s fast & free!
-<a %s>Dobite si posodobitev</a> - hitra in nič vas ne stane!
+Prenesite si posodobitev - hitra je in nič nič ne stane!
 
 
 ;get the latest in security
-get the latest in security
+dobite si najnovejše s področja varnosti
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ Poskrbite za hitrejše brskanje
 
 
 ;enjoy greater customization
-enjoy greater customization
+prilagojevanje je sedaj še lažje
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Vaša različica Firefoxa bo kmalu predmet napadov na spletu.
 
 
 ;Stay safe online
@@ -63,26 +63,26 @@ Vaša različica Firefoxa ni več zaščitena pred napadi na spletu.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Še en, zadnji, opomin, odslej vam bomo brskalnik posodabljali samodejno
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox vaše različice operacijskega sistema več ne podpira in bo zaradi tega ranljiv za napade na spletu.
 
 
 ;We recommend:
-We recommend:
+Priporočamo vam:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Posodobite svoj <a %s>operacijski sistem</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Prenesite si združljiv brskalnik
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Namestite brezplačno nadgradnjo za svoj <a %s>operacijski sistem</a>
 
 
