[l10n][fr] Firefox 3.6 EOL strings.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103963 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/upgradedialog.lang
+++ b/fr/upgradedialog.lang
@@ -43,7 +43,7 @@ personnalisez encore mieux à votre goût
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Votre version de Firefox sera bientôt vulnérable aux attaques en ligne.
 
 
 ;Stay safe online
@@ -63,26 +63,26 @@ Votre version de Firefox n'est plus protégée contre les attaques en ligne.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Ceci est le dernier rappel avant la mise à jour automatique vers la dernière version
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ne gère plus la version de votre système d'exploitation et sera bientôt vulnérable aux attaques en ligne.
 
 
 ;We recommend:
-We recommend:
+Nous vous recommandons&nbsp;:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+de mettre à jour votre <a %s>système d'exploitation</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+de télécharger un navigateur compatible
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+d'installer une mise à jour gratuite pour votre <a %s>système d'exploitation</a>
 
 
