Translation update for the upgradedialog.lang file - el locale
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103969 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -63,26 +63,26 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Αυτή είναι η τελευταία υπενθύμιση πριν γίνει αυτόματη αναβάθμιση στην πιο πρόσφατη έκδοση.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Ο Firefox δεν υποστηρίζει πια την έκδοση του λειτουργικού σας συστήματος και θα είναι ευάλωτος σε διαδικτυακές επιθέσεις.
 
 
 ;We recommend:
-We recommend:
+Συνιστούμε:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Να αναβαθμίσετε το <a %s>λειτουργικό σας σύστημα</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Να κάνετε λήψη ενός συμβατού περιηγητή
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Να εγκαταστήσετε μια δωρεάν αναβάθμιση του <a %s>λειτουργικού σας συστήματος</a>
 
 
