Apr 7 updates to newsletter.lang. Also, minor improvements in the snippets.lang translation.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103971 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -62,7 +62,7 @@ Czëtôj wicy w naszi <span>gazéce</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Twòje zapisanié sã òsało pòcwierdzoné.
 
 
 ;Format
@@ -114,66 +114,64 @@ Firefoksa jidze téż nalezc na Twòjich ùlubionëch pòrtalach spòlëznowëch
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Sprôwiôj <span>Zapisama do Gazétów</span>
 
 
 ;Subscribe
-Subscribe
+Zapiszë sã
 
 
 ;Unsubscribe
-Unsubscribe
+Wëpiszë sã
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Zacéchùjë tuwò, żlë chcesz bëc rëmniãti z e-mailowi lëstë Mozillë
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Rëmôj mie z e-mailowi lëstë Mozillë
 
 
 ;Save Preferences
-Save Preferences
+Zapiszë wëbierk
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Dzãka za zaktualnienié swòjich e-mailowëch ùstôwów.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Jes ju wëpisóny.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Szkòda żes sã wëpisôł. Fejn bë bëło, czéj bës nama rzeknął dlôcze.
 
 
 ;You send too many emails.
-You send too many emails.
+Môta mie za wiele e-mailów sélané.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Waju wiadła mie nie jiteresëją.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Waju e-mailë sã cãżkò czëtô.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Jô sã ne wiadła nie zpisywôł.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Wòlã łączëc sã z Mozillą przez Facebooka ë Twittera.
 
 
 ;Submit
-Submit
+Selôj
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
-
+Dzãka ze rzekniãcé nama, dlôcze môsz sã wëpisóné.
