Translation update for the upgradedialog.lang file - el locale
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103974 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -43,7 +43,7 @@
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Η έκδοση του Firefox που έχετε, σύντομα θα είναι ευάλωτη σε διαδικτυακές επιθέσεις.
 
 
 ;Stay safe online
