updating newsletter (1 sentence unlocalized)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103979 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -114,7 +114,7 @@ Firefox je tudi eno od vaših priljubljenih družabnih spletnih mest. Pridružit
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Urejanje <span>naročnin za novice</span>
 
 
 ;Subscribe
