Bug 727052 - [nb-NO] Localize new firefox beta download page for desktop and mobile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104012 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nb-NO/firefoxtesting.lang
+++ b/nb-NO/firefoxtesting.lang
@@ -26,7 +26,7 @@ Firefox Beta for Mobil:
 
 
 ;Download Beta and be part of the next version of Firefox.
-Last ned Beta, og vær en del av den neste Firefox-versjonen.
+Last ned Beta, og vær en del av den neste Firefox.
 
 
 ;1. Test Features
@@ -34,7 +34,7 @@ Last ned Beta, og vær en del av den neste Firefox-versjonen.
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Prøv de nyeste ytelse-, tilpasnings-, og sikkerhetsforbedringene som er nesten leveringsklare.
+Prøv de nyeste forbedringene som er nesten leveringsklare.
 
 
 ;2. Refine &amp; Polish
