--- a/nb-NO/euballot.lang
+++ b/nb-NO/euballot.lang
@@ -2,6 +2,6 @@
 
 
 ;Firefox is fast, flexible and secure. Proudly non-profit, we're always innovating for you. Try the free download!
-Firefox is fast, flexible and secure. Proudly non-profit, we're always innovating for you. Try the free download!
+Firefox er rask, fleksibel og trygg. Som en stolt nonprofit leverer vi alltid nyskapning. Last ned gratis!
 
 
