--- a/cs/upgradedialog.lang
+++ b/cs/upgradedialog.lang
@@ -63,26 +63,26 @@ Vaše verze Firefoxu již není chráněna proti online útokům.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Toto je poslední upozornění dříve, než bude vaše instalace automaticky povýšena na nejnovější verzi.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox již nepodporuje vaší verzi operačního systému. Budete tak náchylní na bezpečnostní chyby.
 
 
 ;We recommend:
-We recommend:
+Doporučujeme:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Aktualizovat svůj <a %s>operační systém</a>.
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Stáhnout kompatibilní prohlížeč.
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Nainstalovat si zdarma aktualizaci ke svému <a %s>operačnímu systému</a>.
 
 
