--- a/cs/upgradedialog.lang
+++ b/cs/upgradedialog.lang
@@ -43,7 +43,7 @@ těšte se ze skvělé přizpůsobitelnosti
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Vaše verze Firefoxu bude brzy náchylná na bezpečnostní chyby.
 
 
 ;Stay safe online
