--- a/is/upgradedialog.lang
+++ b/is/upgradedialog.lang
@@ -23,7 +23,7 @@ Betri en nokkru sinni fyrr
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Búið er að gefa út nýja útgáfu af Firefox sem er betri í að verja þig fyrir netárásum.
 
 
 ;Get the upgrade — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+náðu í það nýjasta fyrir öryggi
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ fáðu aukna afkastagetu
 
 
 ;enjoy greater customization
-enjoy greater customization
+fáðu betri möguleika á að sérsníða
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Útgáfa þín af Firefox verður mjög fljótlega óvarinn fyrir netárásum.
 
 
 ;Stay safe online
@@ -63,26 +63,25 @@ Firefox útgáfan þín er ekki lengur vernduð gagnvart árásum á netinu.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Þetta er seinasta áminning áður en útgáfan hjá þér verður uppfærð sjálfvirkt í nýjustu útgáfu
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox styður ekki lengur stýrikerfið sem þú ert keyrandi á og það er óvarið fyrir netárásum.
 
 
 ;We recommend:
-We recommend:
+Við mælum með:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Uppfæra <a %s>stýrikerfið</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Niðurhala samhæfðum vafra
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
-
+Setja inn ókeypis uppfærslu fyrir <a %s>stýrikerfið</a>
 
